# temporal-agent-sandbox

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  contracts.py
app/activities/: agents.py  sandbox.py
app/agents/: codegen.py  pipeline.py
app/api/: auth.py  errors.py  main.py  routes_runs.py  schemas.py
app/observability/: logging.py  tracing.py
app/sandbox/: firecracker.py  gvisor.py  runner.py
app/sandbox/runtime/: Dockerfile  entrypoint.py
app/temporal/: client.py  policies.py  worker.py  workflows.py
deploy/: Dockerfile.app  docker-compose.yml  otel-collector.yaml
deploy/gvisor/: daemon.json  install-runsc.sh
infra/terraform/: README.md  eks.tf  main.tf  runtimeclass.tf  temporal.tf
scripts/: demo.sh
tests/: test_activities.py  test_sandbox_isolation.py  test_workflow.py
